adding material and customer controllers

--- a/WebApi/Diginovasi.Api/Diginovasi.Api/Properties/launchSettings.json
+++ b/WebApi/Diginovasi.Api/Diginovasi.Api/Properties/launchSettings.json
@@ -13,6 +13,7 @@
     "Diginovasi.Api": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "swagger",
       "applicationUrl": "https://localhost:54321;http://localhost:54322",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
