Adding Master Data Components

--- a/WebApi/Diginovasi.Api/Diginovasi.Api/Diginovasi.Api.csproj
+++ b/WebApi/Diginovasi.Api/Diginovasi.Api/Diginovasi.Api.csproj
@@ -5,6 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Uploads\__NOTE__.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Uploads\__NOTE__.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.16" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.16" />
