--- a/WebApp/DiginovasiWebApp/angular.json
+++ b/WebApp/DiginovasiWebApp/angular.json
@@ -26,7 +26,8 @@
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css",
-              "node_modules/datatables.net-bs4/css/dataTables.bootstrap4.min.css"
+              "node_modules/font-awesome/css/font-awesome.min.css",
+              "node_modules/datatables.net-bs4/css/dataTables.bootstrap4.min.css",
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.js",
