--- a/WebApp/DiginovasiWebApp/package.json
+++ b/WebApp/DiginovasiWebApp/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^4.5.0",
     "datatables.net": "^1.10.20",
     "datatables.net-bs4": "^1.10.20",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "moment": "^2.29.1",
     "rxjs": "~6.6.0",
